--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,39 +1,3 @@
-#container {
-  margin: 100px auto;
-  width: 360px;
-  box-shadow: 0 0 3px, rgba(0,0,0,0.1);
-  background: #f7f7f7;
-}
-
-.completed {
-  color: gray;
-  text-decoration: line-through;
-}
-
-.fa-plus {
-  float: right;
-  padding-top: 5px;
-}
-
-input[type='text']{
-  width: 100%;
-  margin: 0;
-  padding: 13px 13px 13px 20px;
-  background: #f7f7f7;
-  font-size: 18px;
-  box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  color: #2980B9;
-  border: none;
-}
-
-input:focus {
-  background: white;
-  border: 3px solid #2980B9;
-  outline: none;
-}
-
 body {
   font-family: 'Roboto', sans-serif;
   background: #2BC0E4; /* fallback for old browsers */
@@ -63,6 +27,59 @@ li {
   color: #666;
 }
 
+span {
+  background: #e74e3e;
+  height: 40px;
+  margin-right: 20px;
+  text-align: center;
+  color: white;
+  display: inline-block;
+  width: 0;
+  transition: 0.2s linear;
+  opacity: 0;
+}
+
 li:nth-child(2n){
   background: #f7f7f7;
+}
+
+li:hover span{
+  width: 40px;
+  opacity: 1.0;
+}
+
+input[type='text']{
+  width: 100%;
+  margin: 0;
+  padding: 13px 13px 13px 20px;
+  background: #f7f7f7;
+  font-size: 18px;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  color: #2980B9;
+  border: none;
+}
+
+input:focus {
+  background: white;
+  border: 3px solid #2980B9;
+  outline: none;
+}
+
+#container {
+  margin: 100px auto;
+  width: 360px;
+  box-shadow: 0 0 3px, rgba(0,0,0,0.1);
+  background: #f7f7f7;
+}
+
+.completed {
+  color: gray;
+  text-decoration: line-through;
+}
+
+.fa-plus {
+  float: right;
+  padding-top: 5px;
 }
