add footer and footer styles

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -39,6 +39,14 @@ span {
   opacity: 0;
 }
 
+footer {
+  color: rgba(153,153,153,0.7);
+  font-size: 10px;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
 li:nth-child(2n){
   background: #f7f7f7;
 }
